cmake_minimum_required(VERSION 3.26)
project(Prog3003 C)

set(CMAKE_C_STANDARD 11)

add_executable(bai1 Chapter01/ExOne/src/bai1.c)
add_executable(bai2 Chapter01/ExOne/src/bai2.c)
add_executable(bai3 Chapter01/ExOne/src/bai3.c)
add_executable(bai4 Chapter01/ExOne/src/bai4.c)
add_executable(bai5 Chapter01/ExOne/src/bai5.c)
add_executable(bai6 Chapter01/ExOne/src/bai6.c)